--- a/src/usr_05.tex
+++ b/src/usr_05.tex
@@ -201,7 +201,7 @@ But only for files that have been detected to be plain text.
 There are actually two parts here.
 "\verb!autocmd FileType text!" is an autocommand.
 This defines that when the file type is set to "text" the following command is automatically executed.
-"\verb!setlocal textwidth=78!" sets the 'textwidth' option to 78, but only locally in one file.
+"\verb!setlocal textwidth=78!" sets the \verb!'textwidth'! option to 78, but only locally in one file.
 
 \phantomsection
 \label{restore-cursor}
