--- a/src/usr_06.tex
+++ b/src/usr_06.tex
@@ -101,7 +101,7 @@ Or the colors could be wrong:
 								(or another dark color) it will use light colors for text.  If it is
 								white (or another light color) it will use dark colors for text.  If
 								Vim guessed wrong the text will be hard to read.  To solve this, set
-								the `background' option.  For a dark background:
+								the \verb!'background'! option.  For a dark background:
 
 								\begin{Verbatim}[samepage=true]
 		 :set background=dark
@@ -114,7 +114,7 @@ Or the colors could be wrong:
 												\end{Verbatim}
 
 								Make sure you put this \emph{before} the "\verb!:syntax enable!" command, otherwise the colors will already have been set.
-								You could do "\verb!:syntax reset!" after setting `background' to make Vim set the default colors again.
+								You could do "\verb!:syntax reset!" after setting \verb!'background'! to make Vim set the default colors again.
 
 				\item [The colors are wrong when scrolling bottom to top.]
 								Vim doesn't read the whole file to parse the text.
@@ -228,7 +228,7 @@ If you want syntax highlighting only for specific files, use this:
  \end{Verbatim}
 
 This will enable the syntax highlighting, but not switch it on automatically when starting to edit a buffer.
-To switch highlighting on for the current buffer, set the `syntax' option:
+To switch highlighting on for the current buffer, set the \verb!'syntax'! option:
 
  \begin{Verbatim}[samepage=true]
  :set syntax=ON
@@ -248,10 +248,10 @@ But when you use a dark background the colors will be adjusted to look good on w
 
 There are several options that change the way Vim prints:
 \begin{itemize}
-				\item `printdevice'
-				\item `printheader'
-				\item `printfont'
-				\item `printoptions'
+				\item \verb!'printdevice'!
+				\item \verb!'printheader'!
+				\item \verb!'printfont'!
+				\item \verb!'printoptions'!
 \end{itemize}
 
 To print only a range of lines, use Visual mode to select the lines and then type the command:
