--- a/src/usr_26.tex
+++ b/src/usr_26.tex
@@ -56,7 +56,7 @@ The year will be increased by one:
 Use "\verb!n!" to find the next year, and press "\verb!.!" to repeat the CTRL-A ("\verb!.!" is a bit quicker to type).
 Repeat "\verb!n!" and "\verb!.!" for all years that appear.
 
-Hint: set the 'hlsearch' option to see the matches you are going to change, then you can look ahead and do it faster.
+Hint: set the \verb!'hlsearch'! option to see the matches you are going to change, then you can look ahead and do it faster.
 
 Adding more than one can be done by prepending the number to CTRL-A.
 Suppose you have this list:
