--- a/src/usr_12.tex
+++ b/src/usr_12.tex
@@ -43,15 +43,13 @@ It's a lot faster to use record and playback.
 Let's assume you have a directory with C++ files, all ending in "\verb!.cpp!".
 There is a function called "GetResp" that you want to rename to "GetAnswer".
 
-\begin{center} \begin{tabularx}{\textwidth}{r X}
-	% The next two lines go off the page TMC
+\begin{center} \begin{tabularx}{\textwidth}{r p{11cm}} % I guessed at this length for the wrap TMC
 				\texttt{vim *.cpp} & Start Vim, defining the argument list to contain all the C++ files.
 				You are now in the first file. \\
 				\texttt{qq} & Start recording into the q register \\
 				\texttt{:\%s/\textbackslash <GetResp\textbackslash >/GetAnswer/g} & Do the replacements in the first file. \\
 				\texttt{:wnext} & Write this file and move to the next one. \\
 				\texttt{q} & Stop recording. \\
-	% The next two lines go off the page TMC
 				\texttt{@q} & Execute the q register.
 				This will replay the substitution and "\texttt{:wnext}".
 				You can verify that this doesn't produce an error message. \\
@@ -368,5 +366,5 @@ To go to the previous match, use the "\verb!:cprev!" command.
 Use "\verb!:clist!" to see all the matches and where they are.
 
 The "\verb!:grep!" command uses the external commands grep (on Unix) or findstr (on Windows).
-You can change this by setting the option `grepprg'.
+You can change this by setting the option \verb!'grepprg'!.
 \clearpage
