--- a/src/usr_20.tex
+++ b/src/usr_20.tex
@@ -33,7 +33,7 @@ You don't have to move the cursor to the end of the line before executing the co
 
 The most often used keys to move around in the command line:
 
-\begin{center} \begin{longtable}{c l}
+\begin{center} \begin{longtable}{r l}
 				<Left> & one character left \\
 				<Right> & one character right\\
 				<S-Left> or <C-Left> & one word left\\
@@ -91,7 +91,7 @@ To get rid of what you already typed, without executing it, press CTRL-C or <Esc
 <Esc> is the universal "get out" key.
 Unfortunately, in the good old Vi pressing <Esc> in a command line executed the command!
 Since that might be considered to be a bug, Vim uses <Esc> to cancel the command.
-But with the `cpoptions' option it can be made Vi compatible.
+But with the \verb!'cpoptions'! option it can be made Vi compatible.
 And when using a mapping (which might be written for Vi) <Esc> also works Vi compatible.
 Therefore, using CTRL-C is a method that always works.
 
@@ -134,7 +134,7 @@ Therefore, always use the full name.
 In the user manual the long version of the option names is used.
 Many options also have a short name.
 Unlike "\verb!:!" commands, there is only one short name that works.
-For example, the short name of `autoindent' is `ai'.
+For example, the short name of \verb!'autoindent'! is \verb!'ai'!.
 Thus these two commands do the same thing:
 
 \begin{Verbatim}[samepage=true]
@@ -285,10 +285,10 @@ In this case "is" stands for the short name of "\verb!incsearch!".
 The CTRL-L command completes the word to the longest unambiguous string.
 If you type "\verb!:edit i!" and there are files "\verb!info.txt!" and "\verb!info_backup.txt!" you will get "\verb!:edit info!".
 
-The `wildmode' option can be used to change the way completion works.
-The `wildmenu' option can be used to get a menu-like list of matches.
-Use the `suffixes' option to specify files that are less important and appear at the end of the list of files.
-The `wildignore' option specifies files that are not listed at all.
+The \verb!'wildmode'! option can be used to change the way completion works.
+The \verb!'wildmenu'! option can be used to get a menu-like list of matches.
+Use the \verb!'suffixes'! option to specify files that are less important and appear at the end of the list of files.
+The \verb!'wildignore'! option specifies files that are not listed at all.
 
 More about all of this here: |\verb!:h cmdline-completion!|
 \subsection{Command line history}
