--- a/src/usr_25.tex
+++ b/src/usr_25.tex
@@ -10,7 +10,7 @@ In other words, you have to press <Enter> yourself.
 This is useful when you are writing programs where you want to decide where the line ends.
 It is not so good when you are creating documentation and want the text to be at most 70 character wide.
 
-If you set the 'textwidth' option, Vim automatically inserts line breaks.
+If you set the \verb!'textwidth'! option, Vim automatically inserts line breaks.
 Suppose, for example, that you want a very narrow column of only 30 characters.
 You need to execute the following command:
 
@@ -50,7 +50,7 @@ Continuing on, you can type in the rest of the paragraph:
 
 You do not have to type newlines; Vim puts them in automatically.
 
-\emph{Note}: The 'wrap' option makes Vim display lines with a line break, but this doesn't insert a line break in the file.
+\emph{Note}: The \verb!'wrap'! option makes Vim display lines with a line break, but this doesn't insert a line break in the file.
 \subsubsection{Reformatting}
 The Vim editor is not a word processor.
 In a word processor, if you delete something at the beginning of the paragraph, the line breaks are reworked.
@@ -124,11 +124,11 @@ That's a blank line, but not an empty line.
 
 Vim is able to format more than just plain text.
 See |\verb!:h fo-table!| for how to change this.
-See the 'joinspaces' option to change the number of spaces used after a full stop.
+See the \verb!'joinspaces'! option to change the number of spaces used after a full stop.
 
 It is possible to use an external program for formatting.
 This is useful if your text can't be properly formatted with Vim's builtin command.
-See the 'formatprg' option.
+See the \verb!'formatprg'! option.
 \subsection{Aligning text}
 To center a range of lines, use the following command:
 
@@ -138,8 +138,8 @@ To center a range of lines, use the following command:
 
 \verb!{range}! is the usual command-line range.
 \verb![width]! is an optional line width to use for centering.
-If \verb![width]! is not specified, it defaults to the value of 'textwidth'.
-(If 'textwidth' is 0, the default is 80.)
+If \verb![width]! is not specified, it defaults to the value of \verb!'textwidth'!.
+(If \verb!'textwidth'! is 0, the default is 80.)
 
 For example:
 
@@ -150,11 +150,11 @@ For example:
 results in the following:
 
 \begin{Verbatim}[samepage=true]
-			 I taught for a while. One 
-			 time, I was stopped by the 
-		 Fort Worth police, because my 
-			homework was too hard. True 
-								 story. 
+			   I taught for a while. One 
+			   time, I was stopped by the 
+			 Fort Worth police, because my 
+			  homework was too hard. True 
+				     story. 
 \end{Verbatim}
 \subsubsection{Right alignment}
 Similarly, the "\verb!:right!" command right-justifies the text:
@@ -166,11 +166,11 @@ Similarly, the "\verb!:right!" command right-justifies the text:
 gives this result:
 
 \begin{Verbatim}[samepage=true]
-						I taught for a while. One 
-					 time, I was stopped by the 
-				Fort Worth police, because my 
-					homework was too hard. True 
-															 story. 
+						       I taught for a while. One 
+						      time, I was stopped by the 
+						   Fort Worth police, because my 
+						     homework was too hard. True 
+									  story. 
 \end{Verbatim}
 \subsubsection{Left alignment}
 Finally there is this command:
@@ -235,7 +235,7 @@ text:
 
 This is entered by typing a tab, some text, <Enter>, tab and more text.
 
-The 'autoindent' option inserts indents automatically:
+The \verb!'autoindent'! option inserts indents automatically:
 
 \begin{Verbatim}[samepage=true]
  :set autoindent
@@ -248,7 +248,7 @@ In the above example, the tab after the <Enter> is not needed anymore.
 To increase the amount of indent in a line, use the "\verb!>!" operator.
 Often this is used as "\verb!>>!", which adds indent to the current line.
 
-The amount of indent added is specified with the 'shiftwidth' option.
+The amount of indent added is specified with the \verb!'shiftwidth'! option.
 The default value is 8.
 To make "\verb!>>!" insert four spaces worth of indent, for example, type this:
 
@@ -265,9 +265,9 @@ When used on the second line of the example text, this is what you get:
 
 "\verb!4>>!" will increase the indent of four lines.
 \subsubsection{Tabstop}
-If you want to make indents a multiple of 4, you set 'shiftwidth' to 4.
+If you want to make indents a multiple of 4, you set \verb!'shiftwidth'! to 4.
 But when pressing a <Tab> you still get 8 spaces worth of indent.
-To change this, set the 'softtabstop' option:
+To change this, set the \verb!'softtabstop'! option:
 
 \begin{Verbatim}[samepage=true]
  :set softtabstop=4
@@ -275,29 +275,29 @@ To change this, set the 'softtabstop' option:
 
 This will make the <Tab> key insert 4 spaces worth of indent.
 If there are already four spaces, a <Tab> character is used (saving seven characters in the file).
-(If you always want spaces and no tab characters, set the 'expandtab' option.)
+(If you always want spaces and no tab characters, set the \verb!'expandtab'! option.)
 
-\emph{Note}: You could set the 'tabstop' option to 4.
-However, if you edit the file another time, with 'tabstop' set to the default value of 8, it will look wrong.
+\emph{Note}: You could set the \verb!'tabstop'! option to 4.
+However, if you edit the file another time, with \verb!'tabstop'! set to the default value of 8, it will look wrong.
 In other programs and when printing the indent will also be wrong.
-Therefore it is recommended to keep 'tabstop' at eight all the time.
+Therefore it is recommended to keep \verb!'tabstop'! at eight all the time.
 That's the standard value everywhere.
 
 \subsubsection{Changing tabs}
 You edit a file which was written with a tabstop of 3.
 In Vim it looks ugly, because it uses the normal tabstop value of 8.
-You can fix this by setting 'tabstop' to 3.
+You can fix this by setting \verb!'tabstop'! to 3.
 But you have to do this every time you edit this file.
 
 Vim can change the use of tabstops in your file.
-First, set 'tabstop' to make the indents look good, then use the "\verb!:retab!" command:
+First, set \verb!'tabstop'! to make the indents look good, then use the "\verb!:retab!" command:
 
 \begin{Verbatim}[samepage=true]
  :set tabstop=3
  :retab 8
 \end{Verbatim}
 
-The "\verb!:retab!" command will change 'tabstop' to 8, while changing the text such that it looks the same.
+The "\verb!:retab!" command will change \verb!'tabstop'! to 8, while changing the text such that it looks the same.
 It changes spans of white space into tabs and spaces for this.
 You can now write the file.
 Next time you edit it the indents will be right without setting an option.
@@ -308,7 +308,7 @@ Therefore it's a good habit to use "\verb!\t!" instead of a real tab.
 Sometimes you will be editing a file that is wider than the number of columns in the window.
 When that occurs, Vim wraps the lines so that everything fits on the screen.
 
-If you switch the 'wrap' option off, each line in the file shows up as one line on the screen.
+If you switch the \verb!'wrap'! option off, each line in the file shows up as one line on the screen.
 Then the ends of the long lines disappear off the screen to the right.
 
 When you move the cursor to a character that can't be seen, Vim will scroll the text to show it.
@@ -356,7 +356,7 @@ The "window"s below the text indicate the text that is visible after the command
 \end{Verbatim}
 
 \subsubsection{Moving with wrap off}
-When 'wrap' is off and the text has scrolled horizontally, you can use the following commands to move the cursor to a character you can see.
+When \verb!'wrap'! is off and the text has scrolled horizontally, you can use the following commands to move the cursor to a character you can see.
 Thus text left and right of the window is ignored.
 These never cause the text to scroll:
 
@@ -376,14 +376,14 @@ These never cause the text to scroll:
 \subsubsection{Breaking at words}
 \label{edit-no-break}
 When preparing text for use by another program, you might have to make paragraphs without a line break.
-A disadvantage of using 'nowrap' is that you can't see the whole sentence you are working on.
-When 'wrap' is on, words are broken halfway, which makes them hard to read.
+A disadvantage of using \verb!'nowrap'! is that you can't see the whole sentence you are working on.
+When \verb!'wrap'! is on, words are broken halfway, which makes them hard to read.
 
-A good solution for editing this kind of paragraph is setting the 'linebreak' option.
+A good solution for editing this kind of paragraph is setting the \verb!'linebreak'! option.
 Vim then breaks lines at an appropriate place when displaying the line.
 The text in the file remains unchanged.
 
-Without 'linebreak' text might look like this:
+Without \verb!'linebreak'! text might look like this:
 
 \begin{Verbatim}[samepage=true]
     +---------------------------------+
@@ -415,10 +415,10 @@ it looks like this:
 
 Related options:
 \begin{itemize}
-				\item 'breakat' specifies the characters where a break can be inserted.
-				\item 'showbreak' specifies a string to show at the start of broken line.
+				\item \verb!'breakat'! specifies the characters where a break can be inserted.
+				\item \verb!'showbreak'! specifies a string to show at the start of broken line.
 \end{itemize}
-Set 'textwidth' to zero to avoid a paragraph to be split.
+Set \verb!'textwidth'! to zero to avoid a paragraph to be split.
 \subsubsection{Moving by visible lines}
 The "\verb!j!" and "\verb!k!" commands move to the next and previous lines.
 When used on a long line, this means moving a lot of screen lines at once.
@@ -518,7 +518,7 @@ Typing "\verb!0.693!" results in:
 
 \begin{Verbatim}[samepage=true]
     nice table    test 1     test 2  test 3 
-    input A       0.534          0.693 
+    input A       0.534              0.693 
     input B       0.913 
 \end{Verbatim}
 
@@ -561,7 +561,7 @@ Go back to non-virtual cursor movements with:
 \end{Verbatim}
 
 \subsubsection{Virtual replace mode}
-The disadvantage of using 'virtualedit' is that it "feels" different.
+The disadvantage of using \verb!'virtualedit'! is that it "feels" different.
 You can't recognize tabs or spaces beyond the end of line when moving the cursor around.
 Another method can be used: Virtual Replace mode.
 
